# keep-tahoe-blue

./: README.md
backend/: pyproject.toml  test_api.py  test_ocr.py  test_ocr_simple.py
backend/app/: main.py  ocr.py
backend/app/data/: default-schema.json  form_schema.json
backend/tests/: __init__.py  conftest.py  test_api.py  test_api.py.backup
backend/utils/: preprocessor.py
frontend/: package-lock.json  package.json
frontend/docs/: blueprint.md
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/actions/: category-actions.ts
frontend/src/app/api/categories/: route.ts
frontend/src/app/images/: logo.tsx
frontend/src/app/review/: page.tsx
frontend/src/app/submitted/: page.tsx
frontend/src/components/: data-collection-form.tsx  edit-form-modal.tsx  file-uploader.tsx
frontend/src/components/ui/: button.tsx
frontend/src/data/: categories.yaml
frontend/src/hooks/: use-local-storage.ts
frontend/src/lib/: submission-storage.ts  validators.ts
