[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.119.1",
    "numpy>=2.2.6",
    "opencv-python>=4.11.0.86",
    "paddleocr>=3.3.0",
    "paddlepaddle>=3.2.0",
    "pillow>=11.0.0",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
tests = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-mock>=3.15.1",
    "httpx>=0.27.0",
]

[tool.basedpyright]
venvPath = "."
venv = ".venv"
extraPaths = [
    ".venv/lib/python3.12/site-packages",
]
